# AgentKred

./: .gitignore  README.md  TEST_PLAN.md  agent_client.py  agent_client_secure.py  database.py  demo_profile.py  main.py  main_patch.py  models.py  pyproject.toml  register_me.py  run_backend.py  start.sh
contracts/: AgentVault.sol
tests/: conftest.py  test_api.py
web/: package-lock.json  package.json  tailwind.config.ts
web/app/: LanguageSwitcher.tsx  LocaleContext.tsx  globals.css  layout.tsx  locales.ts  page.tsx
web/app/agent/[id]/: page.tsx
web/app/leaderboard/: page.tsx
